--- a/SRC/One.css
+++ b/SRC/One.css
@@ -56,7 +56,7 @@ main::after{
     margin-bottom: 20px;
 }
 
-.conteudo .descricao{
+.conteudo .descrica{
     color:rgb(255, 255, 255);
     font-family: secular one;
     line-height: 20px;
