--- a/SRC/One.css
+++ b/SRC/One.css
@@ -59,8 +59,8 @@ main::after{
 .conteudo .descricao{
     color:rgb(255, 255, 255);
     font-family: secular one;
-    line-height: 20px;
-    margin-left: -10%;
+    /*line-height: 20px;
+    margin-left: -10%;*/
   
 
 }
